# bio-jtools-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix
.cargo/: audit.toml
.github/workflows/: main.yml
examples/: .gitignore  SRR0000001.fastq  SRR0000001.hg19.bam  SRR0000001.hg38.bam  SRR0000002.hg19.bam  SRR0000002.hg38.bam  a.bed  c.bed  ids.txt
examples/hg19/: NA12878.bam.md5
examples/hg38/: NA12878.bai  NA12878.bam.md5
src/: main.rs  utils.rs
src/align/: filter.rs  info_stats.rs  mod.rs  reader.rs
src/cli/: mod.rs
src/data/: mod.rs
src/fastq/: filter.rs  header.rs  info_stats.rs  mod.rs
src/fastq/filter/: error.rs  iter.rs  mod.rs  old_filter.rs  opts.rs
src/fastx/: header.rs  info_stats.rs  mod.rs
src/interval/: mod.rs
src/record/: error.rs  filter.rs  header.rs  mod.rs  stats.rs
src/utils/: formats.rs  mod.rs
