[package]
name = "bio-jtools"
version = "2021.1.21"
authors = ["James Hawley <jamesrichardhawley@gmail.com>"]
edition = "2018"
description = "A suite of bioinformatics tools for interacting with high throughput sequencing (HTS) data"
license = "MIT"
repository = "https://github.com/jrhawley/bio-jtools-rs/"
homepage = "https://github.com/jrhawley/bio-jtools-rs/"
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "cli", "fastq"]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

[dependencies]
needletail = { version = "0.4", features = ["compression"] }
rust-lapper = "0.4.4"
chrono = "0.4.11"
regex = "1.3.9"
walkdir = "2.3.1"
prettytable-rs = "0.8.0"
itertools = "0.9"
indoc = "0.3"
bam = "0.1.1"
flate2 = "1.0.19"

[dependencies.clap]
version = "2"
features = ["color"]

[[bin]]
name = "bjt"
path = "src/main.rs"

