[package]
name = "bio-jtools"
version = "2022.6.6"
authors = ["James Hawley <jamesrichardhawley@gmail.com>"]
edition = "2021"
description = "A suite of bioinformatics tools for interacting with high throughput sequencing (HTS) data"
license = "MIT"
repository = "https://github.com/jrhawley/bio-jtools-rs/"
homepage = "https://github.com/jrhawley/bio-jtools-rs/"
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "cli", "fastq"]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

[dependencies]
bam = "0.1"
chrono = "0.4"
flate2 = "1"
indoc = "0.3"
itertools = "0.9"
needletail = { version = "0.4", features = ["compression"] }
prettytable-rs = "0.8.0"
rust-lapper = "0.4.4"
regex = "1"
walkdir = "2.3"

[dependencies.clap]
version = "2"
features = ["color"]

[[bin]]
name = "bjt"
path = "src/main.rs"

