[package]
name = "bio-jtools"
version = "2022.10.16"
authors = ["James Hawley <developer@jrhawley.ca>"]
edition = "2021"
description = "A suite of bioinformatics tools for interacting with high throughput sequencing (HTS) data"
license = "MIT"
repository = "https://github.com/jrhawley/bio-jtools-rs/"
homepage = "https://github.com/jrhawley/bio-jtools-rs/"
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "cli", "fastq"]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

[dependencies]
bam = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
flate2 = "1"
indoc = "0.3"
itertools = "0.9"
needletail = { version = "0.4", features = ["compression"] }
prettytable-rs = "0.8.0"
rust-lapper = "0.4.4"
regex = "1"
walkdir = "2.3"
thiserror = "1.0.31"
anyhow = "1.0.65"

[[bin]]
name = "bjt"
path = "src/main.rs"

[build-dependencies]
cargo-make = "0.36"

[dev-dependencies]
cargo-nextest = "0.9"

